package com.niudada.strategy.interfaces;

public interface PaymentStrategy {
    void pay(int amount);
}
